This fixes scroll wheel support, as reported in bug #1625. PS/2 supports vertical scrolling only for now.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25230 a95241bf-73f2-0310-859d-f6bbb57e9c96